<resources>
    <string name="app_name">Chrysalis2019</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_registeration">Registration</string>
    <string name="menu_techReg">Technical Registration</string>

    <string name="hint_teamName">Team Name</string>
    <string name="hint_member1">Member-1 Name</string>
    <string name="hint_member2">Member-2 Name</string>
    <string name="hint_member3">Member-3 Name</string>
    <string name="btn_Register">Register</string>
    <string name="imgView_techReg">Tech-Registration Image</string>
    <string name="hint_contactNo">Team Contact Number</string>
    <string name="menu_treasureHuntReg">Treasure Hunt Registration</string>
    <string name="imgView_treasureHuntReg">Treasure Hunt</string>
    <string name="hint_member4">Member-4 Name</string>
    <string name="hint_member5">Member-5 Name</string>
    <string name="action_logout">Logout</string>
    <string name="tv_our_team">Developed By</string>
    <string name="nidhi_jha">Nidhi Jha</string>
    <string name="sagar_hanwat">Sagar Hanwat</string>
    <string name="devkant_mishra">Dev Kant Mishra</string>
    <string name="mohd_tausif_anwar">Mohd Tausif Anwar</string>
    <string name="item_about_us">About Us</string>
    <string name="image_upload">image upload</string>
    <string name="btn_upload_image">Upload</string>
    <string name="add_caption">Add caption to imgae</string>
    <string name="menu_gallery_view">Snap Share</string>
    <string name="Tresure_Hunt_Team">Tresure Hunt Team</string>
    <string name="btn_choose_image">Select Photo</string>


</resources>
