<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />


        <item
               android:id="@+id/nav_snap_Share_View"
               android:icon="@drawable/ic_menu_gallery"
               android:title="@string/menu_gallery_view" />
        <!--     <item
              android:id="@+id/nav_slideshow"
              android:icon="@drawable/ic_menu_slideshow"
              android:title="@string/menu_slideshow" />
          <item
              android:id="@+id/nav_tools"
              android:icon="@drawable/ic_menu_manage"
              android:title="@string/menu_tools" />-->


    <item android:title="@string/menu_registeration">

            <item
                android:id="@+id/nav_techReg"
                android:icon="@drawable/ic_menu_techreg"
                android:title="@string/menu_techReg" />
            <item
                android:id="@+id/nav_treasureHuntReg"
                android:icon="@drawable/ic_menu_treasurehunt_reg"
                android:title="@string/menu_treasureHuntReg" />

    </item>

    <item
        android:id="@+id/nav_aboutUs"
        android:icon="@drawable/ic_menu_about_us"
        android:title="@string/item_about_us" />
    </group>
</menu>
