<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/img_coverpic_techReg"
        android:layout_width="match_parent"
        android:layout_height="126dp"
        android:contentDescription="@string/imgView_techReg"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <EditText
        android:id="@+id/et_teamName_techReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_teamName"
        android:inputType="text"
        android:importantForAutofill="no" />
    <EditText
        android:id="@+id/et_firstPersonName_techReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_member1"
        android:inputType="text"
        android:importantForAutofill="no" />
    <EditText
        android:id="@+id/et_secondPersonName_techReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_member2"
        android:inputType="text"
        android:importantForAutofill="no" />
    <EditText
        android:id="@+id/et_thirdPersonName_techReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_member3"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_contactNo_techReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_contactNo"
        android:inputType="number"
        android:importantForAutofill="no" />



    <Button
        android:id="@+id/btn_Register_techReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_Register" />

</LinearLayout>
