<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="@color/BackGroundWhite"
    android:orientation="vertical">

    <TextView
        android:textColor="@color/colorPrimary"
        android:layout_width="match_parent"
        android:textStyle="italic"
        android:textSize="50dp"
        android:text="@string/Tresure_Hunt_Team"
        android:gravity="center"
        android:layout_height="wrap_content"
        />
    <EditText
        android:id="@+id/et_teamName_treasureHuntReg"
        android:background="@color/BackGroundWhite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:paddingTop="8dp"
        android:layout_marginTop="5sp"
        android:hint="@string/hint_teamName"
        android:inputType="text"
        android:importantForAutofill="no" />
    <EditText
        android:id="@+id/et_firstPersonName_treasureHuntReg"
        android:layout_width="match_parent"
        android:background="@color/BackGroundWhite"
        android:layout_height="wrap_content"
        android:ems="10"

        android:paddingTop="8dp"
        android:layout_marginTop="5sp"
        android:hint="@string/hint_member1"
        android:inputType="text"
        android:importantForAutofill="no" />
    <EditText
        android:id="@+id/et_secondPersonName_treasureHuntReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"

        android:paddingTop="8dp"
        android:layout_marginTop="5sp"
        android:background="@color/BackGroundWhite"
        android:hint="@string/hint_member2"
        android:inputType="text"
        android:importantForAutofill="no" />
    <EditText
        android:id="@+id/et_thirdPersonName_treasureHuntReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"

        android:paddingTop="8dp"
        android:layout_marginTop="5sp"
        android:background="@color/BackGroundWhite"
        android:hint="@string/hint_member3"
        android:inputType="text"
        android:importantForAutofill="no" />
    <EditText
        android:id="@+id/et_fourthPersonName_treasureHuntReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:background="@color/BackGroundWhite"

        android:paddingTop="8dp"
        android:layout_marginTop="5sp"
        android:hint="@string/hint_member4"
        android:inputType="text"
        android:importantForAutofill="no" />
    <EditText
        android:id="@+id/et_fifthPersonName_treasureHuntReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:background="@color/BackGroundWhite"

        android:paddingTop="8dp"
        android:layout_marginTop="5sp"
        android:hint="@string/hint_member5"
        android:inputType="text"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_contactNo_treasureHuntReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"

        android:paddingTop="8dp"
        android:layout_marginTop="5sp"
        android:background="@color/BackGroundWhite"
        android:hint="@string/hint_contactNo"
        android:inputType="number"
        android:importantForAutofill="no" />



    <Button
        android:id="@+id/btn_Register_treasureHuntReg"
        android:background="@color/BtnBackGround"
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_Register" />


</LinearLayout>
