<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.sagar.chrysalis2019.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_techReg"
        android:name="com.sagar.chrysalis2019.ui.Registration.technicalRegistration"
        android:label="@string/menu_techReg"
        tools:layout="@layout/fragment_technical_registration" />
    <fragment
        android:id="@+id/nav_treasureHuntReg"
        android:name="com.sagar.chrysalis2019.ui.Registration.treasureHuntRegistration"
        android:label="@string/menu_treasureHuntReg"
        tools:layout="@layout/fragment_tresurehunt_registration" />








</navigation>